--- a/app/en/index.html
+++ b/app/en/index.html
@@ -57,7 +57,7 @@
               <li><a href="#/Документы">Documents</a></li>
               <li><a href="#/Преподаватели">Teachers</a></li>
               <li><a href="#/Фотогалерея">Photogallery</a></li>
-              <li><a href="../index.html">Russian vesion</a></li>
+              <li><a href="../index.html"><img src="../img/fr.gif" height="30" width="30" alt=""> Russian vesion</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
