--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,7 @@
               <li><a href="#Dock">Документы</a></li>
               <li><a href="#/Преподаватели">Преподаватели</a></li>
               <li><a href="#/Фотогалерея">Фотогалерея</a></li>
-              <li><a href="en/index.html">Английская версия</a></li>
+              <li><a href="en/index.html"><img src="img/fa.jpg" height="30" width="30" alt=""> Английская версия</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
