--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
       }
 
       @media (max-width: 980px) {
-        /* Enable use of floated navbar text1 */
+        /* Enable use of floated navbar text */
         .navbar-text.pull-right {
           float: none; 
           
