--- a/app/en/index.html
+++ b/app/en/index.html
@@ -75,6 +75,7 @@
               <li  class = "purple"><a href = "#/Научная работа">Directions of scientific operation</a></li>
               <li class = "sky blue"><a href = "#/Лаборатории">Scientific laboratories</a></li>
               <li class = "cyan"><a href = "#/Контакты">Contacts</a></li>
+              <li class = "cyan"><a href = "#/О проекте">About</a></li>
               
             </ul>
           </div><!--/.well -->
