--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
             <ul class="nav">
               <li><a href="#/Главная">Главная</a></li>
               <li><a href="http://informatic.ugatu.ac.ru/shedule/shedule.htm">Расписание</a></li>
-              <li><a href="#Dock">Документы</a></li>
+              <li><a href="#/Документы">Документы</a></li>
               <li><a href="#/Преподаватели">Преподаватели</a></li>
               <li><a href="#/Фотогалерея">Фотогалерея</a></li>
               <li><a href="en/index.html"><img src="img/fa.jpg" height="30" width="30" alt=""> Английская версия</a></li>
