Возможно последние штрихи...

--- a/app/en/index.html
+++ b/app/en/index.html
@@ -69,13 +69,13 @@
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
              
-              <li class = "mediumslateblue"><a href = "#/Новости">News</a></li>
-              <li class = "sky blue"><a href = "#/О кафедре">History</a></li>
-              <li class = "blue"><a href = "#/Направления и специальности">Directions and specialties</a></li>
-              <li  class = "purple"><a href = "#/Научная работа">Directions of scientific operation</a></li>
-              <li class = "sky blue"><a href = "#/Лаборатории">Scientific laboratories</a></li>
-              <li class = "cyan"><a href = "#/Контакты">Contacts</a></li>
-              <li class = "cyan"><a href = "#/О проекте">About</a></li>
+              <li><a href = "#/Новости">News</a></li>
+              <li><a href = "#/О кафедре">History</a></li>
+              <li><a href = "#/Направления и специальности">Directions and specialties</a></li>
+              <li><a href = "#/Научная работа">Directions of scientific operation</a></li>
+              <li><a href = "#/Лаборатории">Scientific laboratories</a></li>
+              <li><a href = "#/Контакты">Contacts</a></li>
+              <li><a href = "#/О проекте">About</a></li>
               
             </ul>
           </div><!--/.well -->
