--- a/app/index.html
+++ b/app/index.html
@@ -70,13 +70,13 @@
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
              
-              <li class = "mediumslateblue"><a href = "#/Новости">Новости</a></li>
-              <li class = "sky blue"><a href = "#/О кафедре">История</a></li>
-              <li class = "blue"><a href = "#/Направления и специальности">Направления и специальности</a></li>
-              <li  class = "purple"><a href = "#/Научная работа">Направления научной работы</a></li>
-              <li class = "sky blue"><a href = "#/Лаборатории">Научные лаборатории</a></li>
-              <li class = "cyan"><a href = "#/Контакты">Контакты</a></li>
-              <li class = "cyan"><a href = "#/О проекте">О проекте</a></li>
+              <li><a href = "#/Новости">Новости</a></li>
+              <li><a href = "#/О кафедре">История</a></li>
+              <li><a href = "#/Направления и специальности">Направления и специальности</a></li>
+              <li><a href = "#/Научная работа">Направления научной работы</a></li>
+              <li><a href = "#/Лаборатории">Научные лаборатории</a></li>
+              <li><a href = "#/Контакты">Контакты</a></li>
+              <li><a href = "#/О проекте">О проекте</a></li>
               
             </ul>
           </div><!--/.well -->
